--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Deploy to EC2 (run remote commands)
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_USER: ${{ secrets.EC2_USER }}   # should be "ubuntu"
         run: |
           set -euo pipefail
           echo "SSH to $EC2_USER@$EC2_HOST and deploy..."
@@ -43,24 +43,33 @@ jobs:
             echo "Deploy started on $(date)"
             cd /var/www/lifequest || { echo "path missing"; exit 2; }
 
-            # fix: mark this repo safe for this user to avoid "dubious ownership" errors
-            git config --global --add safe.directory /var/www/lifequest
+            # Ensure the deploy user owns the repo (already done previously, no-op if already correct)
+            sudo chown -R deploy:deploy /var/www/lifequest || true
 
-            # ensure exact code
-            git fetch --all --prune
-            git reset --hard origin/main
+            # Run the repository update and Python install as 'deploy' (non-root)
+            sudo -i -u deploy bash -lc '
+              set -euxo pipefail
+              cd /var/www/lifequest
 
-            # create venv if missing
-            if [ ! -d "backend/venv" ]; then
-              python3 -m venv backend/venv
-            fi
+              # mark safe directory (harmless if already set)
+              git config --global --add safe.directory /var/www/lifequest || true
 
-            # activate and install
-            source backend/venv/bin/activate
-            pip install --upgrade pip wheel
-            pip install -r backend/requirements.txt
+              # update code to match origin/main
+              git fetch --all --prune
+              git reset --hard origin/main
 
-            # reload systemd and restart service
+              # ensure venv exists
+              if [ ! -d "backend/venv" ]; then
+                python3 -m venv backend/venv
+              fi
+
+              # activate and install requirements inside venv
+              source backend/venv/bin/activate
+              python -m pip install --upgrade pip wheel
+              python -m pip install -r backend/requirements.txt
+            '
+
+            # Now run system-level steps as ubuntu (sudo) so no password prompt (ubuntu has passwordless sudo)
             sudo systemctl daemon-reload
             sudo systemctl restart lifequest
             sudo systemctl status lifequest --no-pager --lines=20
